[1.156] sync, h2k21 hackathon - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -90,6 +90,17 @@ td {
 <table>
 <tr>
 <td>
+    <a id="h2k21" href="images/hackathons/h2k21.gif">
+    <img src="images/hackathons/h2k21-s.gif" alt="h2k21"></a><br>
+    h2k21: hackathon<br>
+    Октябрь 20 - 28, 2021<br>
+    Говея, Португалия<br>
+    21 разработчик<br>
+    Организован благодаря финансированию со стороны
+    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
+    и поддержке Pedro Almeida
+    <br>
+<td>
     <a id="k2k21" href="images/hackathons/k2k21.gif">
     <img src="images/hackathons/k2k21-s.gif" alt="k2k21"></a><br>
     k2k21: hackathon<br>
@@ -107,6 +118,7 @@ td {
     14 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="a2k20" href="images/hackathons/a2k20.png">
     <img src="images/hackathons/a2k20-s.png" alt="a2k20"></a><br>
@@ -117,7 +129,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Росса Л. Ричардсона.
-<tr>
 <td>
     <a id="u2k20" href="images/hackathons/u2k20.gif">
     <img src="images/hackathons/u2k20-s.gif" alt="u2k20-s"></a><br>
@@ -139,6 +150,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.xplornet.ca">Xplornet</a>.
+<tr>
 <td>
     <a id="p2k19" href="images/hackathons/p2k19.gif">
     <img src="images/hackathons/p2k19-s.gif" alt="p2k19-s"></a><br>
@@ -151,7 +163,6 @@ td {
     и поддержке
     <a href="http://fmi.unibuc.ro">факультета математики и компьютерных наук бухарестского университета</a>.
     <br>
-<tr>
 <td>
     <a id="g2k19" href="images/hackathons/g2k19.gif">
     <img src="images/hackathons/g2k19-s.gif" alt="g2k19-s"></a><br>
@@ -173,6 +184,7 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Kevin Lo и <a href="http://www.funtoro.com">MSI/FUNTORO</a>
     <br>
+<tr>
 <td>
     <a id="a2k19" href="images/hackathons/a2k19.gif">
     <img src="images/hackathons/a2k19-s.gif" alt="a2k19-s"></a><br>
@@ -184,7 +196,6 @@ td {
     <a href="https://www.victoria.ac.nz">Victoria University of Wellington</a>
     и <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
     <br>
-<tr>
 <td>
     <a id="l2k18" href="images/hackathons/l2k18.jpg">
     <img src="images/hackathons/l2k18-s.gif" alt="l2k18-s"></a><br>
@@ -205,6 +216,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Oracle, а также при поддержке Univerzita Jana Evangelisty Purkyn&#283;.
+<tr>
 <td>
     <a id="g2k18" href="images/hackathons/g2k18.gif">
     <img src="images/hackathons/g2k18-s.gif" alt="g2k18-s"></a><br>
@@ -215,7 +227,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и Mitja Mu&#382;eni&#269;.
-<tr>
 <td>
     <a id="p2k18" href="images/hackathons/p2k18.gif">
     <img src="images/hackathons/p2k18-s.gif" alt="p2k18-s"></a><br>
@@ -236,6 +247,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="s2k17" href="images/hackathons/s2k17.gif">
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
@@ -246,7 +258,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и <a href="http://www.xplornet.ca">Xplornet</a>.
-<tr>
 <td>
     <a id="p2k17" href="images/hackathons/p2k17.gif">
     <img src="images/hackathons/p2k17-s.gif" alt="p2k17-s"></a><br>
@@ -268,6 +279,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.utoronto.ca">University of Toronto</a>.
+<tr>
 <td>
     <a id="d2k17" href="images/hackathons/d2k17.gif">
     <img src="images/hackathons/d2k17-s.gif" alt="d2k17-s"></a><br>
@@ -278,7 +290,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.genua.de">genua</a>.
-<tr>
 <td>
     <a id="noshirt" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -297,6 +308,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и David Gwynne.	
+<tr>
 <td>
     <br>
     <br>
@@ -319,7 +331,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и оказанной помощи от <a href="http://www.enseeiht.fr">ENSEEIHT</a> и
     <a href="http://www.objectif-libre.com">Objectif Libre</a>.
-<tr>
 <td>
     <a id="b2k16" href="images/hackathons/b2k16.gif">
     <img src="images/hackathons/b2k16-s.gif" alt="b2k16-s"></a><br>
@@ -339,6 +350,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и помощи <a href="http://www.cl.cam.ac.uk">компьютерной лаборатории в Кэмбридже</a>.
+<tr>
 <td>
     <a id="n2k16" href="images/hackathons/n2k16.gif">
     <img src="images/hackathons/n2k16-s.gif" alt="n2k16-s"></a><br>
@@ -350,7 +362,6 @@ td {
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и <a href="http://www.oracle.com">Oracle</a>, а также помощи
     <a href="http://cuni.cz">Charles University</a>.
-<tr>
 <td>
     <a id="p2k16" href="images/hackathons/p2k16.gif">
     <img src="images/hackathons/p2k16-s.gif" alt="p2k16-s"></a><br>
@@ -371,6 +382,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://esdenera.com">Esdenera Networks</a>.
+<tr>
 <td>
     <a id="u2k15" href="images/hackathons/u2k15.gif">
     <img src="images/hackathons/u2k15-s.gif" alt="u2k15-s"></a><br>
@@ -381,7 +393,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="l2k15" href="images/hackathons/l2k15.gif">
     <img src="images/hackathons/l2k15-s.gif" alt="l2k15-s"></a><br>
@@ -401,6 +412,7 @@ td {
     6 разработчиков<br>
     Организова при поддержке
     <a href="http://www.iij-ii.co.jp/en/">IIJ innovation institute</a>.
+<tr>
 <td>
     <a id="c2k15" href="images/hackathons/c2k15.gif">
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
@@ -411,7 +423,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://sait.ca">SAIT</a>.
-<tr>
 <td>
     <a id="p2k15" href="images/hackathons/p2k15.gif">
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
@@ -432,6 +443,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Девида Гвинне (David Gwynne).
+<tr>
 <td>
     <a id="g2k14" href="images/hackathons/g2k14.gif">
     <img src="images/hackathons/g2k14-s.gif" alt="g2k14-s"></a><br>
@@ -442,7 +454,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке Мити (Mitja Mu&#382;eni&#269;).
-<tr>
 <td>
     <a id="m2k14" href="images/hackathons/m2k14.gif">
     <img src="images/hackathons/m2k14-s.gif" alt="m2k14-s"></a><br>
@@ -463,6 +474,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="b2k13" href="images/hackathons/b2k13.gif">
     <img src="images/hackathons/b2k13-s.gif" alt="b2k13-s"></a><br>
@@ -473,7 +485,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.in-berlin.de">IN-Berlin</a>.
-<tr>
 <td>
     <a id="t2k13" href="images/hackathons/t2k13.jpg">
     <img src="images/hackathons/t2k13-s.gif" alt="t2k13-s"></a><br>
@@ -494,6 +505,7 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.otago.ac.nz">University of Otago</a>.
+<tr>
 <td>
     <a id="c2k12" href="images/hackathons/c2k12.gif">
     <img src="images/hackathons/c2k12-s.gif" alt="c2k12-s"></a><br>
@@ -504,7 +516,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k12" href="images/hackathons/p2k12.gif">
     <img src="images/hackathons/p2k12-s.gif" alt="p2k12-s"></a><br>
@@ -523,6 +534,7 @@ td {
     23 разработчика<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.genua.de">genua</a>.
+<tr>
 <td>
     <a id="g2k12" href="images/hackathons/g2k12.gif">
     <img src="images/hackathons/g2k12-s.gif" alt="g2k12-s"></a><br>
@@ -532,7 +544,6 @@ td {
     41 разработчик<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="r2k12" href="images/hackathons/r2k12.gif">
     <img src="images/hackathons/r2k12-s.gif" alt="r2k12-s"></a><br>
@@ -553,6 +564,7 @@ td {
     15 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="a2k11" href="images/hackathons/a2k11.gif">
     <img src="images/hackathons/a2k11-s.gif" alt="a2k11-s"></a><br>
@@ -563,7 +575,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
     и поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="s2k11" href="images/hackathons/s2k11.jpg">
     <img src="images/hackathons/s2k11-s.gif" alt="s2k11-s"></a><br>
@@ -583,6 +594,7 @@ td {
     36 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
+<tr>
 <td>
     <a id="k2k11" href="images/hackathons/k2k11.jpg">
     <img src="images/hackathons/k2k11-s.gif" alt="k2k11-s"></a><br>
@@ -592,7 +604,6 @@ td {
     15 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="p2k10" href="images/hackathons/p2k10.gif">
     <img src="images/hackathons/p2k10-s.gif" alt="p2k10-s"></a><br>
@@ -609,6 +620,7 @@ td {
     Сентябрь 19 - 25, 2010<br>
     Akiyamago, Sakae Mura, Nagano, Japan<br>
     19 разработчиков<br>
+<tr>
 <td>
     <a id="c2k10" href="images/hackathons/c2k10.gif">
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
@@ -618,7 +630,6 @@ td {
     46 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <br>
     <br>
@@ -646,6 +657,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>
     и при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k9" href="images/hackathons/p2k9.gif">
     <img src="images/hackathons/p2k9-s.gif" alt="p2k9-s"></a><br>
@@ -655,7 +667,6 @@ td {
     14 разоаботчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="f2k9" href="images/hackathons/f2k9.gif">
     <img src="images/hackathons/f2k9-s.gif" alt="f2k9-s"></a><br>
@@ -674,6 +685,7 @@ td {
     46 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="n2k9" href="images/hackathons/n2k9.gif">
     <img src="images/hackathons/n2k9-s.gif" alt="n2k9-s"></a><br>
@@ -681,7 +693,6 @@ td {
     Январь 26 - 30, 2009<br>
     Базель, Швейцария<br>
     19 разработчиков<br>
-<tr>
 <td>
     <a id="h2k8" href="images/hackathons/h2k8.gif">
     <img src="images/hackathons/h2k8-s.gif" alt="h2k8-s"></a><br>
@@ -701,6 +712,7 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k8" href="images/hackathons/c2k8.gif">
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
@@ -710,7 +722,6 @@ td {
     55 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
-<tr>
 <td>
     <a id="n2k8" href="images/hackathons/n2k8.gif">
     <img src="images/hackathons/n2k8-s.gif" alt="n2k8-s"></a><br>
@@ -731,6 +742,7 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также при поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
+<tr>
 <td>
     <a id="p2k7" href="images/hackathons/p2k7.gif">
     <img src="images/hackathons/p2k7-s.gif" alt="p2k7-s"></a><br>
@@ -740,7 +752,6 @@ td {
     13 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k7" href="images/hackathons/c2k7.gif">
     <img src="images/hackathons/c2k7-s.gif" alt="c2k7-s"></a><br>
@@ -759,6 +770,7 @@ td {
     14 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="h2k6" href="images/hackathons/h2k6.gif">
     <img src="images/hackathons/h2k6-s.gif" alt="h2k6-s"></a><br>
@@ -769,7 +781,6 @@ td {
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>,
     а также поддержке <a href="http://www.uc.pt">Коимбрского университета</a>.
-<tr>
 <td>
     <a id="p2k6" href="images/hackathons/p2k6.gif">
     <img src="images/hackathons/p2k6-s.gif" alt="p2k6-s"></a><br>
@@ -786,6 +797,7 @@ td {
     Август 28 - Sep 1, 2006<br>
     Замок Kransberg, Германия<br>
     14 разработчиков<br>
+<tr>
 <td>
     <a id="r2k6" href="images/hackathons/r2k6.gif">
     <img src="images/hackathons/r2k6-s.gif" alt="r2k6-s"></a><br>
@@ -794,7 +806,6 @@ td {
     Гамбург, Германия<br>
     6 разработчиков<br>
     При поддержке Henning Brauer.
-<tr>
 <td>
     <a id="c2k6" href="images/hackathons/c2k6.gif">
     <img src="images/hackathons/c2k6-s.gif" alt="c2k6-s"></a><br>
@@ -813,6 +824,7 @@ td {
     12 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
+<tr>
 <td>
     <a id="c2k5" href="images/hackathons/c2k5.gif">
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
@@ -822,7 +834,6 @@ td {
     60 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
-<tr>
 <td>
     <a id="c2k4" href="images/hackathons/c2k4.gif">
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
@@ -840,6 +851,7 @@ td {
     Сишелт, Британская Колумбия<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
+<tr>
 <td>
     <a id="c2k3" href="images/hackathons/c2k3.gif">
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
@@ -850,7 +862,6 @@ td {
     Организован благодаря финансированию со стороны
     <a href="https://www.nlnetlabs.nl">NLnet</a>
     (после того, как DARPA прекратила оказывать поддержку).
-<tr>
 <td>
     <a id="c2k2" href="images/hackathons/c2k2.gif">
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
@@ -867,6 +878,7 @@ td {
     Вашингтон, округ Колумбия<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.usenix.org">USENIX</a>.
+<tr>
 <td>
     <a id="c2k1" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -876,7 +888,6 @@ td {
     25 разработчиков<br>
     Организован благодаря финансированию со стороны DARPA
     и поддержке <a href="http://www.mit.edu">MIT</a>.
-<tr>
 <td>
     <a id="c2k" href="images/hackathons/noshirt-s.gif">
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
@@ -916,3 +927,4 @@ l2k16 концепт предложен Joel Sing, оформление созд
 t2k17 создана Christopher Roberts.<br>
 n2k18 создана Jojin&amp;HedgeHog.<br>
 u2k20 создана Pamela Mosiejczuk.<br>
+k2k21, h2k21 создана Natasha Allegri.<br>
