[1.517] sync - anoncvs.html

--- a/anoncvs.html
+++ b/anoncvs.html
@@ -315,6 +315,7 @@ $ <b>cd /usr/src</b>
 $ <b>cvs -d /home/cvs -q up -Pd</b>
 </pre>
 
+<!-- XXXrelease - needs an occasional update -->
 В ноябре 2019 года размер репозиториев был таким:
 
 <pre class="cmdbox">
@@ -359,6 +360,7 @@ Host anoncvs.ca.openbsd.org
 <h3 id="MIRROR">Настройка anoncvs зеркала</h3>
 
 <p>
+<!-- XXXrelease - needs an occasional update -->
 Anoncvs зеркала в настоящее время требуется около 6 ГБ свободного места на
 диске (и со временем будут требовать больше!). И для каждого anoncvs-пользователя
 требуется до 64 МБ swap (при условии, что пользователь выполняет сложные операции;
