[1.157] sync - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -253,7 +253,7 @@ td {
     <img src="images/hackathons/s2k17-s.gif" alt="s2k17-s"></a><br>
     s2k17: snowshoe hackathon<br>
     Ноябрь 26 - 29, 2017<br>
-    Elk Lakes Cabin, BC<br>
+    Elk Lakes Cabin, Британская Колумбия, Канада<br>
     10 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="http://www.foretell.ca">ForeTell Technologies</a>
@@ -418,7 +418,7 @@ td {
     <img src="images/hackathons/c2k15-s.gif" alt="c2k15-s"></a><br>
     c2k15: general hackathon<br>
     Июль 15 - 21, 2015<br>
-    <a href="http://sait.ca">SAIT</a>, Calgary<br>
+    Калгари, Канада<br>
     45 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
@@ -428,7 +428,7 @@ td {
     <img src="images/hackathons/p2k15-s.gif" alt="p2k15-s"></a><br>
     p2k15: ports mini hackathon<br>
     Апрель 2 - 7, 2015<br>
-    <a href="http://emps.exeter.ac.uk/">Эксетерский университет</a>, Великобритания<br>
+    Эксетер, Великобритания<br>
     14 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>
@@ -626,7 +626,7 @@ td {
     <img src="images/hackathons/c2k10-s.gif" alt="c2k10-s"></a><br>
     c2k10: General hackathon<br>
     Июнь 25 - Июль 3, 2010<br>
-    Эдмонтон, Альберта<br>
+    Эдмонтон, Альберта, Канада<br>
     46 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
@@ -680,8 +680,8 @@ td {
     <a id="c2k9" href="images/hackathons/c2k9.gif">
     <img src="images/hackathons/c2k9-s.gif" alt="c2k9-s"></a><br>
     c2k9: General hackathon<br>
-    Май 30 - Jun 7, 2009<br>
-    Эдмонтон, Альберта<br>
+    Май 30 - Июнь 7, 2009<br>
+    Эдмонтон, Альберта, Канада<br>
     46 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
@@ -718,7 +718,7 @@ td {
     <img src="images/hackathons/c2k8-s.gif" alt="c2k8-s"></a><br>
     c2k8: General hackathon<br>
     Июнь 6-15, 2008<br>
-    Эдмонтон, Аьберта<br>
+    Эдмонтон, Аьберта, Канада<br>
     55 разработчиков<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.openbsdfoundation.org">OpenBSD Foundation</a>.
@@ -830,7 +830,7 @@ td {
     <img src="images/hackathons/c2k5-s.gif" alt="c2k5-s"></a><br>
     c2k5: General hackathon<br>
     Май 21 - 28, 2005<br>
-    Калгари, Альберта<br>
+    Калгари, Альберта, Канада<br>
     60 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
@@ -839,7 +839,7 @@ td {
     <img src="images/hackathons/c2k4-s.gif" alt="c2k4-s"></a><br>
     c2k4: General hackathon<br>
     Июнь 19 - 26, 2004<br>
-    Калгари, Алберта<br>
+    Калгари, Алберта, Канада<br>
     46 разработчика<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
@@ -848,7 +848,7 @@ td {
     <img src="images/hackathons/pf2k4-s.gif" alt="pf2k4-s"></a><br>
     pf2k4: Разработка pf<br>
     Апрель 24 - 28, 2004<br>
-    Сишелт, Британская Колумбия<br>
+    Сишелт, Британская Колумбия, Канада<br>
     12 разработчиков<br>
     При поддержке Ryan McBride.
 <tr>
@@ -857,7 +857,7 @@ td {
     <img src="images/hackathons/c2k3-s.gif" alt="c2k3-s"></a><br>
     c2k3: General hackathon<br>
     Май 8 - 20, 2003<br>
-    Калгари, Альберта<br>
+    Калгари, Альберта, Канада<br>
     51 разработчик<br>
     Организован благодаря финансированию со стороны
     <a href="https://www.nlnetlabs.nl">NLnet</a>
@@ -867,7 +867,7 @@ td {
     <img src="images/hackathons/c2k2-s.gif" alt="c2k2-s"></a><br>
     c2k2: General hackathon<br>
     Июнь 4 - 12, 2002<br>
-    Калгари, Альберта<br>
+    Калгари, Альберта, Канада<br>
     42 разработчика<br>
     Организован благодаря финансированию со стороны DARPA.
 <td>
@@ -893,7 +893,7 @@ td {
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
     c2k: General hackathon<br>
     Июнь 15 - 18, 2000<br>
-    Калгари, Альберта<br>    
+    Калгари, Альберта, Канада<br>
     18 разработчиков<br>
     Организован благодаря
     <a href="https://www.openbsd.org/donations.html">пожертвованиям проекту OpenBSD</a>.
@@ -902,7 +902,7 @@ td {
     <img src="images/hackathons/noshirt-s.gif" alt="noshirt-s"></a><br>
     c99: Работа над IPSEC<br>
     Июнь 4 - 6, 1999<br>
-    Калгари, Альберта<br>
+    Калгари, Альберта, Канада<br>
     10 разработчиков<br>
     Организован Тео де Раадтом.
 </table>
