--- a/openbgpd/index.html
+++ b/openbgpd/index.html
@@ -3,7 +3,7 @@
 	<meta charset=utf-8>
 	<title>OpenBGPD</title>
 	<meta name="description" content="the main OpenBGPD page">
-	<link rel="canonical" href="http://www.openbgpd.org/">
+	<link rel="canonical" href="https://www.openbgpd.org/">
 	<link rel="stylesheet" href="openbsd.css">
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
