[1.450] sync - security.html

--- a/security.html
+++ b/security.html
@@ -98,7 +98,7 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 
 <p>
 Как и большинство читателей
-<a href="https://www.securityfocus.com/archive/1">
+<a href="https://marc.info/?l=bugtraq">
 рассылки BUGTRAQ</a>, мы верим в преимущества абсолютного разглашения
 проблем безопасности. Среди множества операционных систем мы, похоже,
 первые кто использует такой подход. Многие производители, в том
@@ -293,7 +293,7 @@ Networks.
 
 <p>
 Если вы обнаружили новую уязвимость, сообщите нам, отправив письмо на
-<a href="mailto:deraadt@openbsd.org">deraadt@openbsd.org</a>.
+<a href="mailto:security@openbsd.org">security@openbsd.org</a>.
 <br>
 Если вы хотите зашифровать письмо при помощи PGP (пользуйтесь им
 только при крайней необходимости, так как это неудобно), используйте этот
