[1.42] sync, 7.4 release - rpki-client/portable.html

--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.3 вышла 23 сентября 2021 года.
+Портированная версия rpki-client 7.4 вышла 29 октября 2021 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
