[1.158] sync - hackathons.html

--- a/hackathons.html
+++ b/hackathons.html
@@ -97,8 +97,9 @@ td {
     Говея, Португалия<br>
     21 разработчик<br>
     Организован благодаря финансированию со стороны
-    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>
-    и поддержке Pedro Almeida
+    <a href="https://www.openbsdfoundation.org">The OpenBSD Foundation</a>,
+    поддержке Pedro Almeida и
+    <a href="https://www.cm-gouveia.pt/">муниципалитета Говеи</a>.
     <br>
 <td>
     <a id="k2k21" href="images/hackathons/k2k21.gif">
