[1.4] sync - rpki-client/manual.html

--- a/rpki-client/manual.html
+++ b/rpki-client/manual.html
@@ -20,7 +20,7 @@ Web руководства доступны в самой <a href="../index.html
 Эти руководства относятся к последней версии rpki-client.
 
 <ul>
-<li><a href="https://man.openbsd.org/rpki-client">rpki-client</a>
+<li><a href="https://man.openbsd.org/rpki-client">rpki-client(8)</a>
      &mdash; RPKI валидатор для поддержки BGP Origin Validation
 </ul>
 
