[1.122] sync - libressl/index.html

--- a/libressl/index.html
+++ b/libressl/index.html
@@ -13,22 +13,23 @@
 <header>Проект LibreSSL</header>
 <ul>
 	<li><a href="goals.html">Цели проекта</a>
-	<li><a href="releases.html">Релизы</a>
-	<li><a href="signing.html">Электронная подпись</a>
 	<li><a href="papers.html">Доклады</a>
 	<li><a href="mail.html">Почтовые рассылки</a>
 </ul>
 
+<header>Для OpenBSD</header>
 <ul>
-	<li><a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/">Download</a>
+    <li><a href="../anoncvs.html">AnonCVS</a>
+    <li><a href="https://cvsweb.openbsd.org/src/lib/libtls/">CVSWeb (libtls)</a>
+    <li><a href="https://cvsweb.openbsd.org/src/lib/libcrypto/">CVSWeb (libcrypto)</a>
+    <li><a href="https://cvsweb.openbsd.org/src/lib/libssl/">CVSWeb (libssl)</a>
 </ul>
 
-<header>Исходники</header>
+<header>Для других ОС</header>
 <ul>
-	<li><a href="https://github.com/libressl-portable/">GitHub</a>
-	<li><a href="https://cvsweb.openbsd.org/src/lib/libtls/">WebCVS (libtls)</a>
-	<li><a href="https://cvsweb.openbsd.org/src/lib/libcrypto/">WebCVS (libcrypto)</a>
-	<li><a href="https://cvsweb.openbsd.org/src/lib/libssl/">WebCVS (libssl)</a>
+    <li><a href="releases.html">Релизы</a>
+    <li><a href="https://github.com/libressl-portable/portable">Разработка</a>
+    <li><a href="https://github.com/libressl-portable/portable/issues">Отчет об ошибке</a>
 </ul>
 
 </nav>
