[1.5] sync - openiked/manual.html

--- a/openiked/manual.html
+++ b/openiked/manual.html
@@ -22,11 +22,11 @@ man-страницы
 версии OpenIKED.
 
 <ul>
-<li><a href="https://man.openbsd.org/iked.8">iked</a>
+<li><a href="https://man.openbsd.org/iked.8">iked(8)</a>
     &mdash; демон Internet Key Exchange (IKEv2) второй версии
-<li><a href="https://man.openbsd.org/iked.conf.5">iked.conf</a>
+<li><a href="https://man.openbsd.org/iked.conf.5">iked.conf(5)</a>
     &mdash; конфигурационный файл IKEv2 демона
-<li><a href="https://man.openbsd.org/ikectl.8">ikectl</a>
+<li><a href="https://man.openbsd.org/ikectl.8">ikectl(8)</a>
     &mdash; утилита упроавления IKEv2 демоном
 </ul>
 
