[1.102] sync - faq/pf/example1.html

--- a/faq/pf/example1.html
+++ b/faq/pf/example1.html
@@ -30,8 +30,7 @@ PF - настройка маршрутизатора (Building a Router)
 <h2 id="background">Цель</h2>
 
 Материал на этой странице расскажет как настроить OpenBSD для работы в
-качестве маршрутизатора (router).
-Под маршрутизатором тут подразумевается система со следующими задачами:
+качестве маршрутизатора (router), со следующими задачами:
 
 <ul>
   <li>Преобразование сетевых адресов (Network Address Translation (NAT))
@@ -42,12 +41,23 @@ PF - настройка маршрутизатора (Building a Router)
       (требуется <a href="../faq6.html#Wireless">поддерживаемая WIFI-карта</a>)
 </ul>
 
-В этом примере будут использоваться две
-<a href="https://man.openbsd.org/em">em(4)</a> сетевые карты,
-использующие кабель, и одна беспроводная сетевая карта
-<a href="https://man.openbsd.org/athn">athn(4)</a>.
+Два сетевых интерфейса <a href="https://man.openbsd.org/em">em(4)</a> и один
+<a href="https://man.openbsd.org/athn">athn(4)</a> (wireless) будут использоваться
+в этом примере. Схематично рассматриваемая конфигурация выглядит так:
+
+<pre>
+ [ comp1 ] ---+
+              |
+ [ comp2 ] ---+--- [ switch ] --- em1 [ OpenBSD ] em0 --- [ internet ]
+              |                  athn0
+ [ comp3 ] ---+                        )))))
+                                       ((((( [ comp4 ]
+</pre>
+
+
 Имена интерфейсов <code>em0</code>, <code>em1</code> и <code>athn0</code>
 следует при необходимости заменить.
+
 
 <h2 id="net">Сеть</h2>
 
@@ -81,8 +91,6 @@ inet 192.168.2.1 255.255.255.0
 <a href="https://man.openbsd.org/dhcpd">dhcpd(8)</a> демон, который будет
 предоставлять IP-адреса клиентским машинам в сети, должен запускаться во
 время загрузки системы.
-Для настройки демона используется
-<a href="https://man.openbsd.org/dhcpd.conf">dhcpd.conf(5)</a> файл.
 
 <pre class="cmdbox">
 # <b>rcctl enable dhcpd</b>
@@ -90,8 +98,9 @@ inet 192.168.2.1 255.255.255.0
 # <b>vi /etc/dhcpd.conf</b>
 </pre>
 
-В следующем примере также показано резервирование статических IP-адресов
-для laptop'а и сервера на основе их MAC-адресов.
+В следующем примере <a href="https://man.openbsd.org/dhcpd.conf">dhcpd.conf(5)</a>
+также показано резервирование статических IP-адресов для laptop'а и сервера
+на основе их MAC-адресов.
 
 <pre class="cmdbox">
 subnet 192.168.1.0 netmask 255.255.255.0 {
@@ -107,6 +116,7 @@ subnet 192.168.1.0 netmask 255.255.255.0 {
 		hardware ethernet 11:11:11:11:11:11;
 	}
 }
+
 subnet 192.168.2.0 netmask 255.255.255.0 {
 	option routers 192.168.2.1;
 	option domain-name-servers 192.168.2.1;
@@ -126,7 +136,6 @@ PF в OpenBSD конфигурируется при помощи файла
 Настоятельно рекомендуется быть знакомым с поддерживаемым им синтаксисом,
 а также вообще иметь предствление о PF, прежде чем просто копировать
 приведенный ниже пример.
-Каждая часть примера будет рассмотренна более детально.
 
 <pre class="cmdbox">
 # <b>vi /etc/pf.conf</b>
