[1.80] sync - openntpd/index.html

--- a/openntpd/index.html
+++ b/openntpd/index.html
@@ -10,7 +10,7 @@
 <main>
 <nav>
 
-<header>Информация</header>
+<header>Проект OpenNTPD</header>
 <ul>
 	<li><a href="goals.html">Цели проекта</a>
 	<li><a href="features.html">Возможности</a>
