[1.451] sync - security.html

--- a/security.html
+++ b/security.html
@@ -144,7 +144,7 @@ OpenBSD верит в стойкую безопасность. Мы стреми
 другие, чтобы исправить и их. Мы устранили множество простых и очевидных
 ошибок невнимательного программирования и только по прошествии нескольких
 месяцев обнаружили, что они действительно опасны. (Или, более вероятно, что
-кто-то на <a href="https://www.securityfocus.com/archive/1">BUGTRAQ</a>
+кто-то на <a href="https://marc.info/?l=bugtraq">BUGTRAQ</a>
 опубликует, что другие операционные системы уязвимы к <q>недавно обнаруженной
 проблеме</q>, и тогда выяснится, что в OpenBSD эта ошибка уже была исправлена
 ещё в прошлом релизе). В других случаях, мы застрахованы от реализации
