--- a/rpki-client/portable.html
+++ b/rpki-client/portable.html
@@ -16,7 +16,7 @@
 <hr>
 
 <p>
-Портированная версия rpki-client 7.4 вышла 29 октября 2021 года.
+Портированная версия rpki-client 7.5 вышла 9 ноября 2021 года.
 
 <p>
 Портированная версия rpki-client работает и на нескольких других UNIX системах,
@@ -54,9 +54,10 @@ rpki-client может работать и на других ОС, более н
 приветствуются. Вы можете сообщить об ошибках или отправлять pull request в
 <a href="https://github.com/rpki-client/rpki-client-portable">проект на GitHub</a>.
 
-<p>
+<h3>Электронные подписи</h3>
+
 Архивы с исходниками релизов подписаны (сигнированы) при помощи
-<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/RELEASE_KEY.asc">этого PGP public ключа.</a>.
+<a href="https://ftp.openbsd.org/pub/OpenBSD/rpki-client/RELEASE_KEY.asc">этого PGP public ключа</a>.
 (B5B6416FEA6DDA05EA562A9FCB987F2783972FF9)
 
 <hr>
