[1.595] sync - openssh/portable.html

--- a/openssh/portable.html
+++ b/openssh/portable.html
@@ -20,8 +20,9 @@
 и простой в использовании и поддержке версии для проекта OpenBSD. 
 <a href="history.html#portable">Команда портирования OpenSSH</a>
 берет эту версию и добавляет код, обеспечивающий ее запуск на других
-операционных системах (к сожалению, это приводит к <strong>серьезным 
-отличиям</strong> в реализациях OpenSSH для разных UNIX систем).
+операционных системах.
+(К сожалению, это приводит к <strong>серьезным отличиям</strong>
+в реализациях OpenSSH для разных UNIX систем.)
 
 <p>
 Портировання версия OpenSSH, представленная здесь, предназначена
@@ -37,7 +38,7 @@
 <li>SNI/Reliant Unix
 <li>Solaris
 <li>Digital Unix/Tru64/OSF
-<li>Mac OS X
+<li>macOS
 <li>Cygwin
 <li>... список постоянно продолжает расти.
 </ul>
@@ -47,15 +48,16 @@
 релизы не синхронизированы. Релизы портированной версии помечены суффиком "р"
 (например, 4.0p1). Официальная версия для OpenBSD никогда не использует суффикс
 "р", но вместо этого просто увеличивает номер своей версии, когда она достигает
-стабильного состояния.
+«стабильного состояния» в процессе разработки.
 
 <p id="downloads">
 В следующих файлах описывается процесс разработки портированной версии OpenSSH.
 Файлы релизов подписаны открытым PGP-ключом, находящемся в файле
 <a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/RELEASE_KEY.asc">
 RELEASE_KEY.asc</a>, доступном на FTP сервере.
-Этот ключ также доступны через
-<a href="http://www.keyserver.net/">key server network</a>.
+Этот ключ также доступен через
+<a href="https://pgp.mit.edu/">сеть key-серверов</a> и его fingerprint
+7168B983815A5EEF59A4ADFD2A3F414E736060BA.
 
 <ul>
 <li><a href="https://ftp.openbsd.org/pub/OpenBSD/OpenSSH/portable/ChangeLog">
