--- a/openssh/index.html
+++ b/openssh/index.html
@@ -18,32 +18,28 @@
 	<li><a href="features.html">Возможности</a>
 	<li><a href="security.html">Безопасность</a>
 	<li><a href="specs.html">Спецификации</a>
-	<li><a href="users.html">Пользователи</a>
+	<li><a href="users.html">Кто это использует</a>
 </ul>
 
 <header>Информация</header>
 <ul>
 	<li><a href="manual.html">Руководства</a>
-	<li><a href="report.html">Сообщить об ошибке</a>
 	<li><a href="list.html">Почтовая рассылка</a>
 	<li><a href="https://marc.info/?l=openssh-unix-dev&amp;r=1&amp;w=2">Архив рассылки</a>
 </ul>
 
 <header>Для OpenBSD</header>
 <ul>
-	<li><a href="openbsd.html">FTP</a>
+	<li><a href="openbsd.html">Релизы</a>
 	<li><a href="../anoncvs.html">AnonCVS</a>
 	<li><a href="https://cvsweb.openbsd.org/src/usr.bin/ssh">CVSWeb</a>
 </ul>
 
 <header>Для других ОС</header>
 <ul>
-	<li><a href="portable.html">Linux</a>
-	<li><a href="portable.html">Solaris</a>
-	<li><a href="portable.html">FreeBSD</a>
-	<li><a href="portable.html">AIX</a>
-	<li><a href="portable.html">HP-UX</a>
-	<li><a href="portable.html">другие..</a>
+	<li><a href="portable.html">Релизы</a>
+	<li><a href="https://github.com/openssh/openssh-portable">Development</a>
+	<li><a href="report.html">Сообщить об ошибке</a>
 </ul>
 
 </nav>
