[1.86] sync - libressl/releases.html

--- a/libressl/releases.html
+++ b/libressl/releases.html
@@ -44,14 +44,20 @@ LibreSSL работает и в Windows:
 </ul>
 
 <h3>Цикл поддерживаемых версий</h3>
-<p>
+
 Стабильная версия LibreSSL выходит каждые 6 месяцев, в соответствии с графиком
 разработки самой OpenBSD, и поддерживается/обновляется в течение 1 года после выпуска
 OpenBSD, для которой она была подготовленна. Ниже приведены текущие стабильные версии.
 
-<h3>Signing</h3>
+<h3>Загрузка</h3>
 
-Все архивы с релизами портированной версии LibreSSL подписаны (получают электронную подпись)
+Архивы с исходниками портированной версией LibreSSL можно найти на
+<a href="https://ftp.openbsd.org/pub/OpenBSD/LibreSSL/">FTP сервере</a>
+или на его <a href="../ftp.html">зеркалах</a>.
+
+<h3>Электронная подпись</h3>
+
+Все архивы с релизами портированной версии LibreSSL подписаны (сигнированы)
 при помощи <a href="https://man.openbsd.org/signify.1">signify(1)</a>, при использовании
 открытого (public) ключа:
 <p>
