[1.19] sync - openbgpd/manual.html

--- a/openbgpd/manual.html
+++ b/openbgpd/manual.html
@@ -21,11 +21,11 @@ Web руководства доступны в самой
 Эти руководства относятся к последней версии OpenBGPD.
 
 <ul>
- <li><a href="https://man.openbsd.org/bgpd">bgpd</a>
+ <li><a href="https://man.openbsd.org/bgpd">bgpd(8)</a>
       &mdash; BGP (Border Gateway Protocol) демон
- <li><a href="https://man.openbsd.org/bgpd.conf">bgpd.conf</a>
+ <li><a href="https://man.openbsd.org/bgpd.conf">bgpd.conf(5)</a>
       &mdash; конфигурационный файл демона BGP (Border Gateway Protocol)
- <li><a href="https://man.openbsd.org/bgpctl">bgpctl</a>
+ <li><a href="https://man.openbsd.org/bgpctl">bgpctl(8)</a>
       &mdash; клиент для управления BGP (Border Gateway Protocol) демоном
 </ul>
 
