--- a/openbgpd/index.html
+++ b/openbgpd/index.html
@@ -9,7 +9,7 @@
 
 <main>
 <nav>
-<header>Информация</header>
+<header>Проект OpenBGPD</header>
 <ul>
 	<li><a href="goals.html">Цели проекта</a>
 	<li><a href="manual.html">Документация</a>
@@ -28,8 +28,8 @@
 <header>Для других ОС</header>
 <ul>
 	<li><a href="ftp.html">Релизы</a>
+	<li><a href="https://github.com/openbgpd-portable">Development</a>
 	<li><a href="https://github.com/openbgpd-portable/openbgpd-portable/issues">Нашли ошибку?</a>
-	<li><a href="https://github.com/openbgpd-portable">GitHub</a>
 </ul>
 
 </nav>
