[1.24] sync - openntpd/manual.html

--- a/openntpd/manual.html
+++ b/openntpd/manual.html
@@ -21,11 +21,11 @@ Web руководства доступны в самой
 Эти руководства относятся к последней версии OpenNTPD.
 
 <ul>
-<li><a href="https://man.openbsd.org/ntpd">ntpd</a>
+<li><a href="https://man.openbsd.org/ntpd">ntpd(8)</a>
      &mdash; NTP-демон
-<li><a href="https://man.openbsd.org/ntpctl">ntpctl</a>
+<li><a href="https://man.openbsd.org/ntpctl">ntpctl(8)</a>
      &mdash; NTP-клиент
-<li><a href="https://man.openbsd.org/ntpd.conf">ntpd.conf</a>
+<li><a href="https://man.openbsd.org/ntpd.conf">ntpd.conf(5)</a>
      &mdash; конфигурационный файл NTP-демона
 </ul>
 
@@ -37,4 +37,4 @@ Web руководства доступны в самой
 
 <p>
 Материал о реализации, а так же другая документация о протоколе
-NTP, доступна на станице <a href="http://www.ntp.org/">ntp.org</a>. 
+NTP, доступна на станице <a href="https://www.ntp.org/">ntp.org</a>.
