[1.64] sync - opensmtpd/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -10,7 +10,7 @@
 <main>
 <nav>
 
-<header>OpenSMTPD</header>
+<header>Проект OpenSMTPD</header>
 <ul>
 	<li><a href="goals.html">Цели проекта</a>
 	<li><a href="papers.html">Доклады</a>
@@ -28,8 +28,8 @@
 
 <header>Для других ОС</header>
 <ul>
-	<li><a href="portable.html">Портированная версия</a>
-	<li><a href="https://github.com/OpenSMTPD/OpenSMTPD/">Github</a>
+	<li><a href="https://github.com/OpenSMTPD/OpenSMTPD/">Development</a>
+	<li><a href="https://github.com/OpenSMTPD/OpenSMTPD/issues">Bug Reports</a>
 </ul>
 
 </nav>
