--- a/arm64.html
+++ b/arm64.html
@@ -116,6 +116,7 @@ OpenBSD/arm64 работает на следующем железе:
 		<li><a href="https://www.raspberrypi.org/products/raspberry-pi-3-model-b-plus/">Raspberry Pi 3 Model B+</a>
 		<li><a href="https://www.raspberrypi.org/products/raspberry-pi-4-model-b/specifications/">Raspberry Pi 4</a>
 		<li><a href="https://www.raspberrypi.org/products/raspberry-pi-400-unit/">Raspberry Pi 400</a>
+		<li><a href="https://www.raspberrypi.com/products/compute-module-4/">Raspberry Pi Compute Module 4</a>
 	</ul>
 	<li>Marvell ARMADA 3K
 	<ul>
