[1.452] sync - security.html

--- a/security.html
+++ b/security.html
@@ -186,7 +186,7 @@ Networks.
 Наш проактивный процесс аудита действительно оправдан. Заявления
 подобно <q>Эта проблема была устранена в OpenBSD приблизительно 6
 месяцев назад</q> стали обычным явлением на security-форумах подобных
-<a href="https://www.securityfocus.com/archive/1">BUGTRAQ</a>.
+<a href="https://marc.info/?l=bugtraq">BUGTRAQ</a>.
 
 <p>
 Наиболее интенсивная часть аудита происходила перед релизом OpenBSD 2.0,
